--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
 %p Find me in app/views/home/index.html.haml
 
 -if session[:user].nil?
-  =link_to("Sign in with Bitly", "https://bitly.com/oauth/authorize?client_id=#{@client_id}&redirect_uri=http://localhost:3000/callback/")
+  =link_to("Sign in with Bitly", "https://bitly.com/oauth/authorize?client_id=#{ENV["CLIENT_ID"]}&redirect_uri=#{ENV["REDIRECT_URI"]}")
 -else
   =form_tag user_path(session[:user].id) do
     =label_tag :email, "Enter the email you'd like to recieve your bitly updates at:"
