--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Sevillana|Grand+Hotel|Cookie|Rochester|Pacifico|Norican' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'link.ico' %>
 </head>
 <body>
 
