--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,7 @@
 
 <%= yield %>
 
+  <div id="footer">Disclaimer: This site is not in any way affiliated with Bitly&trade;. This site uses the Bitly&trade; API to help users track links. </div>
+
 </body>
 </html>
