--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -92,4 +92,13 @@ body {
     color: $red;
     font-size: 1.5em;
   }
+  #footer {
+    position: absolute;
+    bottom: 0;
+    background: $grey;
+    width: 100%;
+    padding: 10px;
+    border-top: 10px solid $red;
+    color: $yellow;
+  }
 }// close body
