--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -93,7 +93,7 @@ body {
     font-size: 1.5em;
   }
   #footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     background: $grey;
     width: 100%;
